# svgmini

./: .gitignore  .travis.yml  Cargo.toml  README.MD  appveyor.yml  local-release
ci/: before_deploy.ps1
editors/code/: CHANGELOG.md  README.md  package.json
editors/code/src/: extension.ts
npm/: README.MD  package-lock.json  package.json
npm/lib/: download.js  index.d.ts  index.js  install.js  postinstall.js
src/: defaults.rs  lib.rs  main.rs  options.rs
vscode-extension/: CHANGELOG.md  README.md  package.json
vscode-extension/src/: extension.ts
