[package]
name = "svgmini"
version = "0.1.0"
authors = ["Praveen Perera <praveen@avencera.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
svgcleaner = "0.9.5"
svgdom = "0.10.5"
lazy_static = "1.4.0"
regex = "1"
